# flowlens

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_FIX_PLAN.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_CN.md  README_EN.md  docker-compose.yml  flowlens.db-shm  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
agents/devlog/: cycle-1.md  cycle-10.md  cycle-11.md  cycle-12.md  cycle-13.md  cycle-14.md  cycle-2.md  cycle-24.md  cycle-28.md  cycle-29.md  cycle-3.md  cycle-4.md  cycle-5.md  cycle-6.md  cycle-7.md  cycle-8.md  cycle-9.md  status.md  tasks.md
docs/: AGENT_TEAM_PATTERN.md  CYCLE_PLAN.md  PROJECT_STATUS.md  api-reference.md  architecture.md  deployment.md  evaluation-engine.md  quickstart.md  troubleshooting.md
examples/: _utils.py  auto_instrument_example.py  cost_optimizer.py  demo_agent.py  demo_autoplay.html  demo_dashboard.html  evaluation_pipeline.py  live_dashboard.py  multi_agent.py  multi_trace_analysis.py  quickstart.py  rag_pipeline.py  run_all_demos.py  server_demo.py  take_screenshots.py
flowlens/: __init__.py  cli.py  config.py  exceptions.py  local.py  logging_config.py
flowlens/alerting/: __init__.py  engine.py  webhooks.py
flowlens/analysis/: __init__.py  advisor.py  comparator.py  correlator.py  cost_breakdown.py  cost_forecast.py  dag_builder.py  models.py  patterns.py  smart_advisor.py  trace_diff.py
flowlens/evaluation/: __init__.py  core.py  evaluators.py  llm_judge.py  runner.py  storage.py
flowlens/plugins/: __init__.py  anthropic_plugin.py  langchain_plugin.py  openai_plugin.py
flowlens/sdk/: __init__.py  auto_instrument.py  context.py  decorators.py  exporters.py  models.py  tracer.py
flowlens/server/: __init__.py  app.py  dashboard.html  storage.py  utils.py  validation.py
flowlens/server/routes/: __init__.py  agents.py  alerts.py  cost.py  evaluations.py  sessions.py  stats.py  system.py  traces.py
flowlens/server/static/: charts.js  dashboard.css  dashboard.js  network.js  websocket.js
scripts/: seed_24h.py
tests/: test_alerting.py  test_analysis.py  test_auto_instrument.py  test_cli.py  test_config.py  test_context.py  test_cost_intelligence.py  test_dag.py  test_dag_builder.py  test_dashboard_e2e.py  test_decorators.py  test_decorators_advanced.py  test_evaluation.py  test_evaluation_datasets.py  test_evaluations.py  test_exporters.py  test_feedback.py  test_integration.py  test_local_collector.py  test_models.py  test_new_features.py  test_otlp_exporter.py  test_plugins.py  test_security.py  test_server.py  test_smart_advisor.py  test_span_features.py  test_storage_edge.py  test_stream_decorator.py  test_token_extraction.py  test_trace_diff.py  test_user_context.py  test_validation.py
