[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowlens"
version = "0.1.0"
description = "Agent Observability Platform — Chrome DevTools for LLM Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vector Robotics", email = "williamxiebigjj@gmail.com"},
]
keywords = ["llm", "agent", "observability", "tracing", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
]

[project.scripts]
flowlens = "flowlens.cli:main"

[project.optional-dependencies]
otlp = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/niceyusen/flowlens"
Documentation = "https://github.com/niceyusen/flowlens/blob/main/docs/"
Repository = "https://github.com/niceyusen/flowlens"
Issues = "https://github.com/niceyusen/flowlens/issues"
Changelog = "https://github.com/niceyusen/flowlens/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowlens*"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.ruff_cache
  | dist
  | build
)/
'''

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long — handled by black
    "B008",  # do not perform function calls in argument defaults (FastAPI uses this)
    "N806",  # variable in function should be lowercase (false positives in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["flowlens"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_return_any = false
warn_unused_configs = true
exclude = ["dist", "build", "examples"]
