[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowlens"
version = "1.0.0"
description = "Agent Observability Platform — Chrome DevTools for LLM Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vector Robotics", email = "williamxiebigjj@gmail.com"},
]
keywords = ["llm", "agent", "observability", "tracing", "debugging", "opentelemetry", "fastapi", "causal-analysis", "llm-ops", "monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
]

[project.scripts]
flowlens = "flowlens.cli:cli"

[project.optional-dependencies]
otlp = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]
all = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/niceyusen/flowlens"
Documentation = "https://github.com/niceyusen/flowlens/blob/main/docs/"
Repository = "https://github.com/niceyusen/flowlens"
Issues = "https://github.com/niceyusen/flowlens/issues"
Changelog = "https://github.com/niceyusen/flowlens/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowlens*"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "asyncio: mark test as async",
]

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.ruff_cache
  | dist
  | build
)/
'''

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long — handled by black
    "B008",  # do not perform function calls in argument defaults (FastAPI uses this)
    "N806",  # variable in function should be lowercase (false positives in tests)
    "B904",  # raise from — too noisy for MVP, will fix incrementally
    "N817",  # CamelCase imported as acronym
    "N814",  # CamelCase imported as constant
    "N801",  # class name should use CapWords
    "N805",  # first argument should be self
    "E741",  # ambiguous variable name (e, l, etc.)
    "SIM105", # use contextlib.suppress — less readable
    "SIM115", # use context manager for open — not always appropriate
    "SIM117", # combine with statements — less readable
    "SIM102", # collapsible if — less readable
    "B039",  # mutable default in ContextVar
    "B027",  # empty method body — abstract stubs
]

[tool.ruff.lint.isort]
known-first-party = ["flowlens"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B007", "F811", "E702"]  # allow assert, unused loop vars, redefs, semicolons in tests

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_return_any = false
warn_unused_configs = true
exclude = ["dist", "build", "examples"]
